UI: Fix up rendering of symbol preview to not flicker

--- a/ui/src/style/find-bar.less
+++ b/ui/src/style/find-bar.less
@@ -1,14 +1,4 @@
 /**
- * Find bar position
- */
-.find-bar {
-  position: absolute;
-  top: @pdfjs-toolbarViewer-height + 10;
-  left: @padding * 2;
-  z-index: @pdfjs-sidebarContainer-z-index + 1;
-}
-
-/**
  * Border
  */
 .find-bar {
